[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycopm"
description = "An open-source coarsening framework using OPM Flow"
authors = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
maintainers = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0"}
keywords = ["OPM", "flow", "black-oil", "egrid", "corner-point", "coarsening", "upscaling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "ert",
    "mako",
    "resdata"
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "pycopm.__version__"}

[project.scripts]
pycopm = "pycopm.core.pycopm:main"

[project.urls]
Homepage = "https://cssr-tools.github.io/pycopm"
Repository = "https://github.com/cssr-tools/pycopm"

[tool.setuptools]
packages.find.where = ["src"]
platforms = ["all"]

[project.optional-dependencies]
opm = ["opm"]