[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycopm"
description = "An open-source tool to tailor OPM Flow geological models"
authors = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
maintainers = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0"}
keywords = ["coarsening", "corner-point", "egrid", "flow", "opm", "proxy-models", "refinement", "transformations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "alive_progress<=3.3.0",
    "ert==16.0.8",
    "h5py<=3.14.0",
    "mako<=1.3.10",
    "opm<=2025.10"
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "pycopm.__version__"}

[project.scripts]
pycopm = "pycopm.core.pycopm:main"

[project.urls]
Homepage = "https://cssr-tools.github.io/pycopm"
Repository = "https://github.com/cssr-tools/pycopm"

[tool.setuptools]
packages.find.where = ["src"]
platforms = ["all"]
